src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Absconder_Declaration_Date__c</fullName>
        <label>Absconder Declaration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Absconder_Status__c</fullName>
        <label>Absconder Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Accommodation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accomodation_Type__c</fullName>
        <label>Accomodation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_SR_Count__c</fullName>
        <label>Active SR Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address_Outside_UAE__c</fullName>
        <label>Address Outside UAE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arabic_Full_Name__c</fullName>
        <label>Arabic Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basic_Salary__c</fullName>
        <label>Basic Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Board_of_Directors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board of Directors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Park__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Park</label>
        <referenceTo>Business_Park__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Profile_Status__c</fullName>
        <label>Client Profile Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manager In charge</fullName>
                </value>
                <value>
                    <fullName>Leasing Contact</fullName>
                </value>
                <value>
                    <fullName>Licensing Contact</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Shareholder</fullName>
                </value>
                <value>
                    <fullName>Legal Representative</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Birth__c</fullName>
        <label>Country of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDA_Manger_Id__c</fullName>
        <externalId>true</externalId>
        <label>DDA Manger Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Incorporation__c</fullName>
        <label>Date Of Incorporation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Join__c</fullName>
        <label>Date of Join</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Cost_Center_Name__c</fullName>
        <label>Department/Cost Center Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Expiry_Date__c</fullName>
        <label>Document Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Issue_Date__c</fullName>
        <label>Document Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EIDA_App_No__c</fullName>
        <label>EIDA App No</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIDA_Expiry_Date__c</fullName>
        <label>EIDA Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIDA_Issue_Date__c</fullName>
        <label>EIDA Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIDA_Updated_to_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EIDA # Updated to Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIDA__c</fullName>
        <label>EIDA #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emirate__c</fullName>
        <label>Emirate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emirates_Expiry_Date__c</fullName>
        <label>Emirates Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emirates_ID__c</fullName>
        <label>Emirates ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Contact_Id__c</fullName>
        <description>Encrypted contact id which will be sent to contact email for broker registration.</description>
        <externalId>true</externalId>
        <label>Encrypted Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Permit_Expiry_Date__c</fullName>
        <label>Entry Permit Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Permit_Issue_Date__c</fullName>
        <label>Entry Permit Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Permit__c</fullName>
        <label>Entry Permit#</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Transfer_Date__c</fullName>
        <label>Exit / Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_s_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_of_Study__c</fullName>
        <label>Field of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name_Arabic__c</fullName>
        <label>First Name (Arabic)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Full_Name__c</fullName>
        <label>GM Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Nationality__c</fullName>
        <label>GM Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GM_Passport_No__c</fullName>
        <label>GM Passport No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Resident_in_UAE_Yes_No__c</fullName>
        <label>GM Resident in UAE (Yes/ No)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Given_Name_Arabic__c</fullName>
        <label>Given Name Arabic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCard__c</fullName>
        <label>HealthCard#</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Country__c</fullName>
        <label>In Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <label>Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Types__c</fullName>
        <label>Interest Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Outsourced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Outsourced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LR_Address__c</fullName>
        <label>LR Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LR_Full_Name__c</fullName>
        <label>LR Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LR_Mobile_Number__c</fullName>
        <label>LR Mobile Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Arabic__c</fullName>
        <label>Last Name (Arabic)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leave_Date__c</fullName>
        <label>Leave Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Representative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Representative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Address__c</fullName>
        <label>Local Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name_Arabic__c</fullName>
        <label>Middle Name (Arabic)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_Name__c</fullName>
        <label>Mother Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_s_Name_Arabic__c</fullName>
        <label>Mother&apos;s Name (Arabic)</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_ID__c</fullName>
        <label>National ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nationality</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nationalitys__c</fullName>
        <label>Nationalitys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoofPage__c</fullName>
        <label>NoofPage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Shares__c</fullName>
        <label>Number of Shares</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORACLE_GOS_PARTY_ID__c</fullName>
        <externalId>true</externalId>
        <label>ORACLE GOS PARTY ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORACLE_PARTY_ID__c</fullName>
        <externalId>true</externalId>
        <label>ORACLE PARTY ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation_Field__c</fullName>
        <label>Occupation Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupation_Type__c</fullName>
        <label>Occupation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oracle_Integration_Error_Message__c</fullName>
        <label>Oracle Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Integration_Status__c</fullName>
        <label>Oracle Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Integration - Oracle</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Allowances__c</fullName>
        <label>Other Allowances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Box_Area__c</fullName>
        <label>PO Box Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <label>PO Box</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentCon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ParentCon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_time_employeer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part time employeer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passport_Expiry_Date__c</fullName>
        <label>Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Issue_Date__c</fullName>
        <label>Passport Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_No__c</fullName>
        <label>Passport No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Place_of_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Passport Place of Issue</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts (Passport Place of Issue)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Level__c</fullName>
        <label>Permission Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photo_ID__c</fullName>
        <label>Photo ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Multi_Select__c</fullName>
        <label>Picklist (Multi-Select)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Place_of_Birth__c</fullName>
        <label>Place of Birth</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Credit_Note_Link__c</fullName>
        <label>Policy Credit Note Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Policy_Doc_Link__c</fullName>
        <label>Policy Doc Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Policy_End_Date__c</fullName>
        <label>Policy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Invoice_Doc_Link__c</fullName>
        <label>Policy Invoice Doc Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Policy_Member_Id__c</fullName>
        <label>Policy Member Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Start_date__c</fullName>
        <label>Policy Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_End_Date__c</fullName>
        <label>Position End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Start_Date__c</fullName>
        <label>Position Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Company__c</fullName>
        <label>Previous Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Nationality__c</fullName>
        <label>Previous Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Role__c</fullName>
        <label>Previous Role</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <label>Previous Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Type__c</fullName>
        <label>Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Level__c</fullName>
        <label>Qualification Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RP_Expiry_Date__c</fullName>
        <label>RP Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RP_Issue_Date__c</fullName>
        <label>RP Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RP_UID__c</fullName>
        <label>RP UID#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP__c</fullName>
        <label>RP#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_No__c</fullName>
        <label>Registration No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Page_Indicator__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Custom field to track the completed section of application for customer registration.</description>
        <label>Registration Page Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resume_Date__c</fullName>
        <label>Resume Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Legal Representative</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_National_ID__c</fullName>
        <label>Second National ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Passport_Expiry_Date__c</fullName>
        <label>Second Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Passport_Issue_Date__c</fullName>
        <label>Second Passport Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Passport_No__c</fullName>
        <label>Second Passport No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Security_Clearance_Date__c</fullName>
        <label>Security Clearance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Clearance_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security Clearance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Clearance_Status__c</fullName>
        <label>Security Clearance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security Clearance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Document_Id__c</fullName>
        <label>Signature Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spoken_Languages__c</fullName>
        <label>Spoken Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Nationality__c</fullName>
        <label>Sponsor Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Passport__c</fullName>
        <label>Sponsor Passport#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statutory_Seat__c</fullName>
        <label>Statutory Seat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>